Update Readme et autres

--- a/Classifieur.ipynb
+++ b/Classifieur.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Premiere approche\n",
+    "## Première approche\n",
     "Nous voulons prédire si les conditions valves sont optimales ou pas.\n",
     "\n",
     "Il y a 2000 exemples (cycles) d'entrainements pour 6600 variables. Cela répresente clairement un pb de dimension.\n",
@@ -2387,7 +2387,7 @@
     "Les résultats de performance du classifieur (avec la premiere approche) sur les données de validation sont un peu moins bons que sur les données de test mais ils restent néanmoins satisfaisants avec une accuracy globale de 0.85.\n",
     "\n",
     "Avec plus de temps, on pourrait investiguer:\n",
-    "* d'autres techniques d'extraction de variables (autres echantillonages)\n",
+    "* d'autres techniques d'extraction de variables (autres echantillonages, etc)\n",
     "* d'autres algo de classification (Random Forest est simple et rapide mais d'autres algo pourraient être plus performants).\n",
     "\n"
    ]
